--- a/package.json
+++ b/package.json
@@ -4,24 +4,19 @@
   "description": "To recommend books in Gruntwork",
   "main": "index.js",
   "scripts": {
-    "start": "npm run start:server",
-    "build": "webpack && cp index.html dist/index.html",
-    "build:server": "webpack-dev-server --content-base dist/ --inline --hot ",
-    "start:server": "node ./server/server.js --exec babel-node",
+    "start": "node server/index.js",
+    "dev": "webpack --mode development && node server/index.js",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Hope Ngerebara",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
-    "morgan": "^1.9.1",
-    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -31,22 +26,17 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "babel": "^6.23.0",
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "css-loader": "^3.2.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^4.2.0",
-    "html-loader": "^0.5.5",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-cli": "^3.3.10"
   }
 }
